5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1876_1639.log
== TEST (2019-07-03 18:10:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
n=size(v)
z=zeros(n, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:10:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
n=size(v)
z=zeros(n, dtype=int)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:14:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
n=size(v)
z=zeros(n, dtype=int)
k=0
for i in v:
	if (v[i]%2!=0):
		z[k]=v[i]
		k=k+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:16:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
n=size(v)
k=0
for i in v:
	if (v[i]%2!=0):
		z[k]=v[i]
		k=k+1
z=zeros(k, dtype=int)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:17:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
n=size(v)
k=0
for i in v:
	if (v[i]%2!=0):
		z=zeros(z, dtype=int)
		z[k]=v[i]
		k=k+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:17:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
n=size(v)
k=0
for i in v:
	if (v[i]%2!=0):
		z=zeros(k, dtype=int)
		z[k]=v[i]
		k=k+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:20:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
z=zeros(k, dt)
for i in v:
	if (v[i]%2!=0):
		k=0
		z[k]=z[k]+v[i]
		k=k+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:21:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
z=zeros(k, dtype=int)
for i in v:
	if (v[i]%2!=0):
		k=0
		z[k]=z[k]+v[i]
		k=k+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:22:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
for i in v:
	if (v[i]%2!=0):
		z=(k, dtype=int)
		k=0
		z[k]=z[k]+v[i]
		k=k+1

-- ERROR:
File "XXXX", line 7
    z=(k, dtype=int)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:22:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
for i in v:
	if (v[i]%2!=0):
		z=zeros(k, dtype=int)
		k=0
		z[k]=z[k]+v[i]
		k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:23:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
for i in size(v):
	if (v[i]%2!=0):
		z=zeros(k, dtype=int)
		k=0
		z[k]=z[k]+v[i]
		k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:18:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

v=array(eval(input()))
for i in v:
	if (v[i]%2!=0):
		z=zeros(k, dtype=int)
		k=0
		z[k]=z[k]+v[i]
		k=k+1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:19:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i]%2!=0):
	k=k+1


-- ERROR:
File "XXXX", line 7
    k=k+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:20:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i]%2!=0):
		k=k+1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:20:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i]%2!=0):
		k=k+1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:20:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2!=0):
		k=k+1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:20:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2!=0):
		k=k+1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:20:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2!=0):
		k=k+1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:21:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2!=0):
		k=k+1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:21:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2=0):
		k=k+1

print(k)
-- ERROR:
File "XXXX", line 6
    if (v[i-1]%2=0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:21:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2=0):
		k=k+1

print(k)
-- ERROR:
File "XXXX", line 6
    if (v[i-1]%2=0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:21:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if ((v[i-1]%2)=0):
		k=k+1

print(k)
-- ERROR:
File "XXXX", line 6
    if ((v[i-1]%2)=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:21:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if ((v[i-1]%2)=0):
		k=k+1

print(k)
-- ERROR:
File "XXXX", line 6
    if ((v[i-1]%2)=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:22:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2!=0):
		k=k+1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:22:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1

print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:27:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		v[j-1]=z[j]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:28:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j-1]=v[j-1]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:28:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j-1]=v[j-1]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:29:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j-1]=v[j-1]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:29:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j-1]=v[j-1]
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j-1]=z[j-1]+v[j-1]
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:30:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j-1]=z[j-1]+v[j-1]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:32:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j-1]=z[j]+v[j-1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:32:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j]=z[j]+v[j]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:32:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[j]=z[j]+v[j]
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:33:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		d=0
		z[d]=z[j-1]+v[j-1]
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:34:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=z[j-1]+v[j-1]
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:35:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=v[j-1]
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:35:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=v[j-1]
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:37:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=d
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:37:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=d
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:38:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=v[j-1]
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:38:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:39:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- EXECUTION TIME:
1.20347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1876/1639/main.py", line 7, in <module>
    if (v[i-1]%2==0):
IndexError: index 19 is out of bounds for axis 0 with size 13

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:39:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:39:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:39:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:40:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:40:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:40:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:40:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:41:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:42:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:44:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:46:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:47:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in v:
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:47:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in range(v):
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:50:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in range(v):
	if (v[j-1]%2==0):
		z[d]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:50:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in range(v):
	if (v[j-1]%2==0):
		z[d-1]=j-1
		d=d+1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:51:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in range(v):
	print(j-1)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:51:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in range(v):
	print(j-1)
print(z)
-- EXECUTION TIME:
1.15835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1876/1639/main.py", line 7, in <module>
    if (v[i-1]%2==0):
IndexError: index 19 is out of bounds for axis 0 with size 13

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:51:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in range(v):
	print(j-1)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:52:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in range(v):
	print(j-1)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:52:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
for j in range(v):
	print(j-1)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:52:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	if (v[i-1]%2==0):
		k=k+1
z=zeros(k, dtype=int)
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:53:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	print(i-1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:53:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	print(i-1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:53:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:53:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in v:
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:54:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in range(v):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:54:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
k=0
d=0
v=array(eval(input()))
for i in size(v):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
